fixed overflowing of image on home page on mobile

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -38,7 +38,7 @@
   background-size: cover;
   background-attachment: fixed;
   position: relative;
-
+  overflow: hidden;
   height: 100vh;
 
   -ms-overflow-style: none; // IE 10+
